# snippets

./: .gitignore  README.md
C/pointers/: CMakeLists.txt  pointers.c
C/strings/: CMakeLists.txt  main.c
Cpp/samscpp/: .gitignore  main.cpp  meson.build  types
Cpp/samscpp/lesson10/: inheritance.cpp
Cpp/samscpp/lesson11/: abc.cpp  polymorphism.cpp
Cpp/samscpp/lesson14/: macros.cpp
Cpp/samscpp/lesson15/: std_temp_lib.cpp
Cpp/samscpp/lesson3/: types.cpp
Cpp/samscpp/lesson4/: arrays.cpp  strings.cpp
Cpp/samscpp/lesson5/: operators.cpp
Cpp/samscpp/lesson6/: conditions.cpp
Cpp/samscpp/lesson7/: fns.cpp
Cpp/samscpp/lesson8/: pointers.cpp
Cpp/samscpp/lesson9/: classes_obj.cpp  cpp_structs.cpp
Go/: emptyInterface.go  go.mod  ioWriter.go  maps.go  stringer.go
Go/emptyInterface/: emptyInterface.go
Java/: .gitignore
Java/hello-world/: pom.xml
Java/hello-world/src/main/java/org/example/: Main.java
Java/hello-world/src/main/java/org/foo/: Foo.java
Java/hello-world/src/main/java/org/helloworld/: HelloWorld.java
Java/hello-world/src/main/java/org/snippets/: BuySellStocks.java  ContainsOdd.java  ContainsVowel.java  HasDuplicate.java  HelloWorld.java  NumberIsPrime.java  ReverseAString.java  SimpleBinarySearch.java  ValidAnagram.java  ValidPalindrome.java  ValidParentheses.java
Java/hello-world/src/main/java/org/snippets/classes/: Classes.java
Java/hello-world/src/main/java/org/snippets/dsa/: BuySellStocks.java  HasDuplicate.java  HelloWorld.java  SimpleBinarySearch.java  ValidAnagram.java  ValidPalindrome.java  ValidParentheses.java
Java/hello-world/src/main/java/org/snippets/dsa/structures/: CollectionExamples.java  Customer.java  IterableExamples.java  IterableInterfaceExample.java
Java/httpRequest/: pom.xml
Java/httpRequest/src/main/java/org/example/: Main.java
Java/springdemo/demo/: pom.xml
Java/springdemo/demo/src/main/java/com/example/demo/: DemoApplication.java
Java/store/: README.md  compose.yaml  pom.xml
Java/store/src/main/java/org/vimpiarte/store/: AppConfig.java  HomeController.java  StoreApplication.java
Java/store/src/main/java/org/vimpiarte/store/basicBeans/: AppConfig.java  HeavyResource.java  OrderService.java  PaymentService.java  (+2 more)
Java/store/src/main/resources/: application.yaml
Java/store/src/main/resources/db/migration/: V1__initial_migration.sql  V3__move_state_to_address.sql  V4__add_profile.sql  V5__add_tags.sql
Java/store/src/main/resources/static/: index.html
Java/store/src/test/java/org/vimpiarte/store/: StoreApplicationTests.java
Python/: args_kwargs.py  async_basics.py  break_cont_pass.py  fibonacci.py  generators.py  lambda.py  list_comprehension.py  py_json.py  pyproject.toml  pyrpoject.toml  requirements.txt  sets.py  slicing.py  subprocesses.py  types_generics.py  using_asyncio.py  using_iters.py  using_lists.py  using_numpy.py
Python/async_py/: README.md  main.py  utils.py
Python/async_python/: basics.py
Python/async_python/async_py/: client.py  main.py  py_threads.py  utils.py
Python/async_python/concurrent_pyhton_with_asyncio/: main.py  many_tasks.py  web_requests.py
Python/async_python/py_concurrency_with_asyncio/: README.md  py_threads.py
Python/data/: manifest.json
Python/dsa/: anagram.py  binary_search.py  duplicates.py  fizzbuzz.py  invert_btree.py  palindrome.py  two_sum.py  valid_parantheses.py
Python/dsa/bfs/: __init__.py  walls_and_gates.py
Python/dsa/stacks/: min_stack.py
Python/dsa/trees/: invert_btree.py  node.py  tree_depth.py
Python/hello-cython/: .gitignore  README.md  hello.pyx  main.py  pyproject.toml  using_numpy.pyx
Python/hello-cython/src/hello_cython/: call_c.pyx  convolve.pyx  hello.pyx  main.py
Python/polls/: .gitignore  README.md
Python/polls/aiohttpdemo_polls/: main.py  middleware.py  routes.py  settings.py  views.py
Python/polls/aiohttpdemo_polls/templates/: index.html
Python/power_flow/: README.md  calc.py  clean.py  load.py  main.py
Python/power_flow/data/: buses.csv  lines.csv
Python/power_flow/tests/: data.csv  test_calc.py  test_clean.py  test_load.py
Python/power_flow/tests/fixtures/: corrupt_data.csv
Python/scientific/: README.md  csv_files.py  num_data.py  sensor_analysis.py
Python/scientific/data/: example.csv  mini_no_headers.csv  sensor_readings.csv  simulation.csv
Python/scientific/tests/: test_sensor.py
Rust/: .gitignore
Rust/dsa/: README.md
Rust/dsa/src/: fizzbuzz.rs  has_dup.rs  main.rs  two_sum.rs
Rust/lkj/: Cargo.toml
Rust/lkj/src/lkj/ops/: add.rs  rm.rs
Rust/oop_rust/src/: main.rs
Rust/ownership/src/: main.rs
Rust/project_organization/src/: main.rs  my_module.rs
Rust/project_organization/src/my_lib/: mod.rs  multiply.rs
Rust/project_organization/src/my_lib/divide/: internal_divide.rs  mod.rs
Rust/rust_basics/src/: main.rs
Rust/strings/src/: main.rs
TypeScript/: package-lock.json  package.json
TypeScript/Generics/: generics.js  generics.ts
TypeScript/Interfaces/: interfaces.ts
TypeScript/JavaScriptNinja/: functionContext.js
TypeScript/Problems/: asyncRetry.ts  capitalizeWords.ts  debounce.ts  deepClone.js  fetchAll.ts  fizzbuz.ts  group_by.ts  memoize.js  palindrome.ts  sleep.js  sum.ts
TypeScript/reactprac/: README.md  package-lock.json  package.json  vite.config.ts
TypeScript/reactprac/src/: App.tsx
TypeScript/reactprac/src/components/: Login.tsx
alpine/: README.md  index.html
alpine/store/: index.html  styles.css
bash/: check_cmd.sh  check_os.sh  cli.sh
javascript/: package-lock.json
javascriptNinja/: chpFive.js  chpFour.js  chpSeven.ts  chpThree.js  package.json
javascriptNinja/ninjadom/: eslint.config.js  index.html  package-lock.json  package.json
javascriptNinja/ninjadom/src/: counter.ts  domAttr.ts  insertingHtml.ts  tasks.ts
ml/: hello_tf.py
node/express/: README.md  app.js  commonJsModule.js  globals.js  modules.js  package.json
node/express/content/: results.txt
node/express/modules/: commonJsModule.js
sql/: ddl.sql
terraform/learn-terraform-docker-container/: terraform.tfstate  terraform.tfstate.backup
vagrant/cka/: Vagrantfile
(+19 files in other folders)
