[project]
name = "spam-eggs"
version = "0.1.0"
description = "A project of python snippets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.15.2",
    "requests==2.32.3",
    "pytest==8.2.2",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "httpx==0.28.1",
    "ruff==0.8.3",
    "uvloop==0.21.0",
    "aiohttp==3.11.10",
    "aiohttp[speedups]==3.11.10",
    "numpy==2.2.5",
    "pandas>=2.2.3",
]

[tool.ruff]
line-length = 100
