[project]
name = "spam-eggs"
version = "0.1.0"
description = "A project of python snippets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.15.2",
    "requests==2.32.3",
    "pytest==8.2.2",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "httpx==0.28.1",
    "uvloop==0.21.0",
    "aiohttp==3.11.10",
    "aiohttp[speedups]==3.11.10",
    "numpy==2.2.5",
    "pandas>=2.2.3",
    "ruff>=0.11.7",
    "pandas-stubs>=2.2.3.250308",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
extend-ignore = [
    "RUF005",
    "RUF012",
]
unfixable = [
    "F401",
]
