[project]
name = "hello-cython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.2",
]

[project.scripts]
hello = "main:main"

[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "hello", sources = ["hello.pyx"]}
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "hello.pyx"}, { git = { commit = true } }]
