[project]
name = "hello-cython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.2",
    "numpy>=2.3.1",
]

[project.scripts]
hello = "hello_cython.main:main"

[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "hello_cython.hello", sources = ["src/hello_cython/hello.pyx"]},
  {name = "hello_cython.call_c", sources = ["src/hello_cython/call_c.pyx"]}
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/hello_cython/hello.pyx"},
    { file = "src/hello_cython/call_c.pyx"},
    { git = { commit = true } }
]
